--- a/thisweek.html
+++ b/thisweek.html
@@ -18,8 +18,10 @@
             <h3>Slideshow for 10/18/2022</h3>
             <iframe id="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQvaL1zhAOIGjOoK5fM7IejF9puIaRfu1WAJsw1Z_3tn-32Jk_NE-DhANvfJZsucBIp9GgeWLXnJ46G/embed"></iframe>
             <h3>Resources!</h3>
+            <h4>This Week's Topic: First All Female Spacewalk</h5>
             <ul>
-                <li></li>
+                <li><a href=https://www.space.com/first-all-woman-spacewalk-nasa-success.html>NASA Astronauts Make History with 1st All-Woman Spacewalk
+ (Space.com)</a></li>
             </ul>
         </div>
     </body>
