--- a/thisweek.html
+++ b/thisweek.html
@@ -20,8 +20,9 @@
             <h3>Resources!</h3>
             <h4>This Week's Topic: First All Female Spacewalk</h5>
             <ul>
-                <li><a href=https://www.space.com/first-all-woman-spacewalk-nasa-success.html>NASA Astronauts Make History with 1st All-Woman Spacewalk
+                <li><a href="https://www.space.com/first-all-woman-spacewalk-nasa-success.html">NASA Astronauts Make History with 1st All-Woman Spacewalk
  (Space.com)</a></li>
+		<li><a href="https://en.wikipedia.org/wiki/Christina_Koch">Christina Koch</a> & <a href="https://en.wikipedia.org/wiki/Jessica_Meir">Jessica Meir</a> (Wikipedia)</li>
             </ul>
         </div>
     </body>
