--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		<iframe class="wordle" id="worldle" src="https://worldle.teuteuf.fr/"></iframe>
 		<iframe class="wordle" id="histordle" src="https://histordle.vercel.app/"></iframe>
 		<iframe class="wordle" id="yeardle" src="https://histordle.com/yeardle/"></iframe>
+		
+		<iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vSvs8AVfoyyL-Lmx3BkR_c3VQosxe9MSmaiWcTn20fWJVHWfK4YdeeD4c2TK69wZpZZEtMHxrS_SMrh/embed"></iframe>
+		    <p>PLEASE join the Remind!</p>
 		</div>
 		<script type="text/javascript" src="wordle.js"></script>
 	</body>
