--- a/thisweek.html
+++ b/thisweek.html
@@ -16,7 +16,7 @@
         <div id="bodydiv">
             <h1>This Week in History Club</h1>
             <h3>Slideshow for 10/18/2022</h3>
-            <iframe id="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQvaL1zhAOIGjOoK5fM7IejF9puIaRfu1WAJsw1Z_3tn-32Jk_NE-DhANvfJZsucBIp9GgeWLXnJ46G/embed"></iframe>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQvaL1zhAOIGjOoK5fM7IejF9puIaRfu1WAJsw1Z_3tn-32Jk_NE-DhANvfJZsucBIp9GgeWLXnJ46G/embed"></iframe>
             <h3>Resources!</h3>
             <h4>This Week's Topic: First All Female Spacewalk</h5>
             <ul>
