--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>EHS History Club</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-
-	<body>
-	    <div id="toolbar">
-	        <a id="abutton" href="index.html">Home</a>
-	        <a id="abutton" href="thisweek.html">This Week in History Club</a>
+    <head>
+        <title>This Week in History Club</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    
+    <body>
+	    <div class="toolbar">
+	        <a class="abutton" href="index.html">Home</a>
+	        <a class="abutton" href="thisweek.html">This Week in History Club</a>
+	        <a class="abutton" href="archives.html">Past Weeks in History Club</a>
 	        <!-- <a href="nextweek.html">Next Week in History Club</a> -->
 	        <!-- <a href="officers.html">Club Officers</a> not yet -->
-	        <a id="abutton" href="calendar.html">History Club's Calendar</a>
+	        <a class="abutton" href="calendar.html">History Club's Calendar</a>
 	    </div>
-	    <div id="bodydiv">
-		<h1>EHS History Club!</h1>
-		<h3>Meets every Tuesday at lunch in Mr. Acheson's room.</h3>
-		<h4>Today's Wordles:</h4>
-		
-		<button id="histbutton">Show Today's Histordle</button>
-		<button id="worldbutton">Show Today's Worldle</button>
-		<button id="yearbutton">Show Today's Yeardle</button>
-		
-		<iframe class="wordle" id="worldle" src="https://worldle.teuteuf.fr/"></iframe>
-		<iframe class="wordle" id="histordle" src="https://histordle.vercel.app/"></iframe>
-		<iframe class="wordle" id="yeardle" src="https://histordle.com/yeardle/"></iframe>
-		
-		<iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vSvs8AVfoyyL-Lmx3BkR_c3VQosxe9MSmaiWcTn20fWJVHWfK4YdeeD4c2TK69wZpZZEtMHxrS_SMrh/embed"></iframe>
-		    <p>PLEASE join the Remind!</p>
-		</div>
-		<script type="text/javascript" src="wordle.js"></script>
-	</body>
+        <div class="bodydiv">
+            <h1>This Week in History Club</h1>
+            <h3>Slideshow for 10/25/2022</h3>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQvaL1zhAOIGjOoK5fM7IejF9puIaRfu1WAJsw1Z_3tn-32Jk_NE-DhANvfJZsucBIp9GgeWLXnJ46G/embed"></iframe>
+            <h3>Resources!</h3>
+            <h4>This Week's Topic: Halloween</h5>
+            <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/3uIalVIgD4afZHFBS3pCVb?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <ul>
+                <li><a href="https://www.space.com/first-all-woman-spacewalk-nasa-success.html">NASA Astronauts Make History with 1st All-Woman Spacewalk
+ (Space.com)</a></li>
+		<li><a href="https://en.wikipedia.org/wiki/Christina_Koch">Christina Koch</a> & <a href="https://en.wikipedia.org/wiki/Jessica_Meir">Jessica Meir</a> (Wikipedia)</li>
+            </ul>
+        </div>
+    </body>
 </html>
