--- a/thisweek.html
+++ b/thisweek.html
@@ -6,19 +6,21 @@
     </head>
     
     <body>
-        <div id="toolbar">
-            <a id="abutton" href="index.html">Home</a>
-	        <a id="abutton" href="thisweek.html">This Week in History Club</a>
+	    <div class="toolbar">
+	        <a class="abutton" href="index.html">Home</a>
+	        <a class="abutton" href="thisweek.html">This Week in History Club</a>
+	        <a class="abutton" href="archives.html">Past Weeks in History Club</a>
 	        <!-- <a href="nextweek.html">Next Week in History Club</a> -->
 	        <!-- <a href="officers.html">Club Officers</a> not yet -->
-	        <a id="abutton" href="calendar.html">History Club's Calendar</a>
-        </div>
-        <div id="bodydiv">
+	        <a class="abutton" href="calendar.html">History Club's Calendar</a>
+	    </div>
+        <div class="bodydiv">
             <h1>This Week in History Club</h1>
-            <h3>Slideshow for 10/18/2022</h3>
+            <h3>Slideshow for 10/25/2022</h3>
             <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQvaL1zhAOIGjOoK5fM7IejF9puIaRfu1WAJsw1Z_3tn-32Jk_NE-DhANvfJZsucBIp9GgeWLXnJ46G/embed"></iframe>
             <h3>Resources!</h3>
-            <h4>This Week's Topic: First All Female Spacewalk</h5>
+            <h4>This Week's Topic: Halloween</h5>
+            <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/3uIalVIgD4afZHFBS3pCVb?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <ul>
                 <li><a href="https://www.space.com/first-all-woman-spacewalk-nasa-success.html">NASA Astronauts Make History with 1st All-Woman Spacewalk
  (Space.com)</a></li>
