--- a/calendar.html
+++ b/calendar.html
@@ -6,16 +6,17 @@
 	</head>
 
 	<body>
-	    <div id="toolbar">
-	        <a id="abutton" href="index.html">Home</a>
-	        <a id="abutton" href="thisweek.html">This Week in History Club</a>
+	    <div class="toolbar">
+	        <a class="abutton" href="index.html">Home</a>
+	        <a class="abutton" href="thisweek.html">This Week in History Club</a>
+	        <a class="abutton" href="archives.html">Past Weeks in History Club</a>
 	        <!-- <a href="nextweek.html">Next Week in History Club</a> -->
 	        <!-- <a href="officers.html">Club Officers</a> not yet -->
-	        <a id="abutton" href="calendar.html">History Club's Calendar</a>
+	        <a class="abutton" href="calendar.html">History Club's Calendar</a>
 	    </div>
-	    <div id="bodydiv">
+	    <div class="bodydiv">
 	        <h3>History Club's Calendar</h3>
-	        <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FLos_Angeles&src=Y18yZTI2YmNkN2Y5Nzg3ZTNkY2U4MDAwYzAyMWMzMWNiYTc3ZGQ4ZjY2OTMzOWI3MTc5ZGEyNTU2NDFjZmYyZWY1QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23E4C441" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	        <iframe class="calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FLos_Angeles&src=Y18yZTI2YmNkN2Y5Nzg3ZTNkY2U4MDAwYzAyMWMzMWNiYTc3ZGQ4ZjY2OTMzOWI3MTc5ZGEyNTU2NDFjZmYyZWY1QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23E4C441" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 	        <p>Press the "+" button to save to your Google Account!</p>
 	    </div>
 	</body>
