--- a/thisweek.html
+++ b/thisweek.html
@@ -17,14 +17,13 @@
         <div class="bodydiv">
             <h1>This Week in History Club</h1>
             <h3>Slideshow for 10/25/2022</h3>
-            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQvaL1zhAOIGjOoK5fM7IejF9puIaRfu1WAJsw1Z_3tn-32Jk_NE-DhANvfJZsucBIp9GgeWLXnJ46G/embed"></iframe>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vRwZ5kZ51G067cCttrNd8OaVebtySWJmy-Yk35dEsfKvmSyyraOzEcq5bBYWdcVQ0zrXrLNE0ZqKrtV/embed"></iframe>
             <h3>Resources!</h3>
             <h4>This Week's Topic: Halloween</h5>
             <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/3uIalVIgD4afZHFBS3pCVb?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <ul>
-                <li><a href="https://www.space.com/first-all-woman-spacewalk-nasa-success.html">NASA Astronauts Make History with 1st All-Woman Spacewalk
- (Space.com)</a></li>
-		<li><a href="https://en.wikipedia.org/wiki/Christina_Koch">Christina Koch</a> & <a href="https://en.wikipedia.org/wiki/Jessica_Meir">Jessica Meir</a> (Wikipedia)</li>
+                <li><a href="https://www.history.com/topics/halloween/history-of-halloween">The History of Halloween</a> (History.com)</li>
+		<li><a href="https://en.wikipedia.org/wiki/Halloween">Halloween</a> (Wikipedia)</li>
             </ul>
         </div>
     </body>
