--- a/thisweek.html
+++ b/thisweek.html
@@ -16,14 +16,13 @@
 	    </div>
         <div class="bodydiv">
             <h1>This Week in History Club</h1>
-            <h3>Slideshow for 10/25/2022</h3>
-            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vRwZ5kZ51G067cCttrNd8OaVebtySWJmy-Yk35dEsfKvmSyyraOzEcq5bBYWdcVQ0zrXrLNE0ZqKrtV/embed"></iframe>
+            <h3>Slideshow for 11/8/2022</h3>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vSQmjF5-hpnP0c1Zz4UHw6d5sGT3Ncb1FBAZlNRpPASukixZ1YQbysizp-17X1oxphVFWjAjGpYjL5L/embed"></iframe>
             <h3>Resources!</h3>
-            <h4>This Week's Topic: Halloween</h5>
-            <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/3uIalVIgD4afZHFBS3pCVb?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <h4>This Week's Topic: Veterans Day</h5>
             <ul>
-                <li><a href="https://www.history.com/topics/halloween/history-of-halloween">The History of Halloween</a> (History.com)</li>
-		<li><a href="https://en.wikipedia.org/wiki/Halloween">Halloween</a> (Wikipedia)</li>
+                <li><a href="https://www.history.com/topics/holidays/history-of-veterans-day">The History of Veterans Day</a> (History.com)</li>
+		<li><a href="https://en.wikipedia.org/wiki/Veterans_Day">Veterans Day</a> (Wikipedia)</li>
             </ul>
         </div>
     </body>
