--- a/110822.html
+++ b/110822.html
@@ -16,12 +16,13 @@
 	    </div>
         <div class="bodydiv">
             <h1>This Week in History Club</h1>
-            <h3>Slideshow for 11/15/2022</h3>
-            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQe2LXA2bEJRGY0rO5dwg-H3TH_u0IkWvb8dZd0Z0KFdGJhl5od2nwvuPScneiYmGS_W8iTw9Wm5XNB/embed"></iframe>
+            <h3>Slideshow for 11/8/2022</h3>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vSQmjF5-hpnP0c1Zz4UHw6d5sGT3Ncb1FBAZlNRpPASukixZ1YQbysizp-17X1oxphVFWjAjGpYjL5L/embed"></iframe>
             <h3>Resources!</h3>
-            <h4>This Week's Topic: Interests</h5>
+            <h4>This Week's Topic: Veterans Day</h5>
             <ul>
-                <li>Nothing for this week.</li>
+                <li><a href="https://www.history.com/topics/holidays/history-of-veterans-day">The History of Veterans Day</a> (History.com)</li>
+		<li><a href="https://en.wikipedia.org/wiki/Veterans_Day">Veterans Day</a> (Wikipedia)</li>
             </ul>
         </div>
     </body>
