--- a/111522.html
+++ b/111522.html
@@ -16,14 +16,12 @@
 	    </div>
         <div class="bodydiv">
             <h1>This Week in History Club</h1>
-            <h3>Slideshow for 13/12/2022</h3>
-            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vTWXXx4X6R8QizExrYO5Rl1LD36TQAbVshMqxeW83KLIOBL-e59sy31hXa-j-XGde1nazmTx0EcqR4S/embed"></iframe>
+            <h3>Slideshow for 11/15/2022</h3>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQe2LXA2bEJRGY0rO5dwg-H3TH_u0IkWvb8dZd0Z0KFdGJhl5od2nwvuPScneiYmGS_W8iTw9Wm5XNB/embed"></iframe>
             <h3>Resources!</h3>
-            <h4>This Week's Topic: Qatar's World Cup</h5>
-						<iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/0Zcl4dm1H3eD1kDYz6jiOL?utm_source=generator" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <h4>This Week's Topic: Interests</h5>
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">2022 FIFA World Cup</a> (Wikipedia)</li>
-                <li><a href="https://en.wikipedia.org/wiki/Qatar">Qatar</a> (Wikipedia)</li>
+                <li>Nothing for this week.</li>
             </ul>
         </div>
     </body>
