--- a/121322.html
+++ b/121322.html
@@ -16,13 +16,14 @@
 	    </div>
         <div class="bodydiv">
             <h1>This Week in History Club</h1>
-            <h3>Slideshow for 3/1/2023</h3>
-            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQdcy4XE1Ujn36ReVZ1MpdU3cYfX3PKYrC7pRojLgRDQh2iSmE3xYxxoMxRa6QDlzjdyFJeXN_zqhM8/embed"></iframe>
+            <h3>Slideshow for 13/12/2022</h3>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vTWXXx4X6R8QizExrYO5Rl1LD36TQAbVshMqxeW83KLIOBL-e59sy31hXa-j-XGde1nazmTx0EcqR4S/embed"></iframe>
             <h3>Resources!</h3>
-            <h4>This Week's Topic: New Year</h5>
+            <h4>This Week's Topic: Qatar's World Cup</h5>
+						<iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/0Zcl4dm1H3eD1kDYz6jiOL?utm_source=generator" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/New_Year">New Year</a> (Wikipedia)</li>
-                <li><a href="https://en.wikipedia.org/wiki/Lunar_New_Year">Lunar New Year</a> (Wikipedia)</li>
+                <li><a href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">2022 FIFA World Cup</a> (Wikipedia)</li>
+                <li><a href="https://en.wikipedia.org/wiki/Qatar">Qatar</a> (Wikipedia)</li>
             </ul>
         </div>
     </body>
