--- a/010323.html
+++ b/010323.html
@@ -16,11 +16,13 @@
 	    </div>
         <div class="bodydiv">
             <h1>This Week in History Club</h1>
+            <h3>Slideshow for 3/1/2023</h3>
+            <iframe class="slideshow" src="https://docs.google.com/presentation/d/e/2PACX-1vQdcy4XE1Ujn36ReVZ1MpdU3cYfX3PKYrC7pRojLgRDQh2iSmE3xYxxoMxRa6QDlzjdyFJeXN_zqhM8/embed"></iframe>
             <h3>Resources!</h3>
-            <h4>This Week's Topic: The Real Black Panthers</h5>
-          <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/4P4ZSZU2o8tpkhpxtd7q0v?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <h4>This Week's Topic: New Year</h5>
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Black_Panther_Party">The Black Panther Party</a> (Wikipedia)</li>
+                <li><a href="https://en.wikipedia.org/wiki/New_Year">New Year</a> (Wikipedia)</li>
+                <li><a href="https://en.wikipedia.org/wiki/Lunar_New_Year">Lunar New Year</a> (Wikipedia)</li>
             </ul>
         </div>
     </body>
