--- a/thisweek.html
+++ b/thisweek.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>This Week in History Club</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    
-    <body>
-	    <div class="toolbar">
-	        <a class="abutton" href="index.html">Home</a>
-	        <a class="abutton" href="thisweek.html">This Week in History Club</a>
-	        <a class="abutton" href="archives.html">Past Weeks in History Club</a>
-	        <!-- <a href="nextweek.html">Next Week in History Club</a> -->
-	        <!-- <a href="officers.html">Club Officers</a> not yet -->
-	        <a class="abutton" href="calendar.html">History Club's Calendar</a>
-	    </div>
-        <div class="bodydiv">
-            <h1>This Week in History Club</h1>
-            <h3>Resources!</h3>
-            <h4>This Week's Topic: The Real Black Panthers</h5>
-          <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/episode/4P4ZSZU2o8tpkhpxtd7q0v?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Black_Panther_Party">The Black Panther Party</a> (Wikipedia)</li>
-            </ul>
-        </div>
-    </body>
+
+<head>
+  <title>This Week in History Club</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <div class="toolbar">
+    <a class="abutton" href="index.html">Home</a>
+    <a class="abutton" href="thisweek.html">This Week in History Club</a>
+    <a class="abutton" href="archives.html">Past Weeks in History Club</a>
+    <!-- <a href="nextweek.html">Next Week in History Club</a> -->
+    <!-- <a href="officers.html">Club Officers</a> not yet -->
+    <a class="abutton" href="calendar.html">History Club's Calendar</a>
+  </div>
+  <div class="bodydiv">
+    <h1>This Week in History Club</h1>
+    <h4>This Week's Topic: Welcome Back!!</h4>
+    <div style="position: relative; width: 90%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy"
+        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFtzQVWOJI&#x2F;view?embed"
+        allowfullscreen="allowfullscreen" allow="fullscreen">
+      </iframe>
+    </div>
+    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFtzQVWOJI&#x2F;view?utm_content=DAFtzQVWOJI&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"target="_blank" rel="noopener">Link to presentation</a>
+  </div>
+</body>
+
 </html>
